feat: add PUT enrollment endpoint
